2014-08-29  Chris Moller  <moller@mollerware.com>

	* edit.c: Added multi-window stuff.

	* menu.c (open_object_cb): Temporarily remove variable edit.

2014-08-28  Chris Moller  <moller@mollerware.com>

	* menu.c (file_button_press_cb): Add double-click select/accept.
	* aplwrap.c (main): Add main window title.
	* edit.c (edit_save_cb): New capability: nascent editor
	* edit.c (edit_object): Add edit window title.
	(edit_variable_cb): Add edit-variable framework.

2014-08-25  Chris Moller  <moller@mollerware.com>

	* menu.c (save_log_fer_real): Add "Save Log" capability.

	* apl.c (apl_spawn): Made apl_argv dynamic.

2014-08-17  Chris Moller  <moller@mollerware.com>

	* aplwrap.c (key_press_event): Make ctrl-Windows equivalent to
	ctrl-Break in interrupting APL.

2014-08-16  Chris Moller  <moller@mollerware.com>

	* aplwrap.c (main): Fixed option parsing.
	(key_press_event): Make the keypad Enter key synonymous with the
	main Ennter key.
	(apl_read_out and apl_read_out): Fixes to the read loops.
	(key_press_event): Fixes for spurious newlines.
	(main): More input fixes by David Lamkins.

2014-08-15  Chris Moller  <moller@mollerware.com>

	* aplwrap.c: Might as well start keeping track of the changes,
	just like a real project does...
