@@ -3,8 +3,17 @@
 
 typedef struct {
   GtkTextBuffer *buffer;
-  //  GtkWidget *window;
+  gboolean modified;
+  gchar *name;
+  gint ref_count;
+} buffer_s;
+
+typedef struct {
+  GtkWidget *window;
+  buffer_s  *buffer;
 } window_s;
+#define window(w) (w)->window
+#define buffer(w) (w)->buffer
 
 void edit_object (gchar* name, gint nc);
 
