@@ -1,3 +1,10 @@
+2014-08-30  Chris Moller  <moller@mollerware.com>
+
+	* apl.c (make_env): Fixed a g_malloc mug.
+
+	* edit.c (edit_object): Cleaned up a lot of stuff in shared buffer
+	stuff. 
+
 2014-08-29  Chris Moller  <moller@mollerware.com>
 
 	* edit.c: Added multi-window stuff.
